# test-py

./: .darglint  .flake8  .gitignore  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: api.rst  conf.py  index.rst
docs/autosummary/: glimpse.Exif.rst
docs/templates/: class.rst
src/glimpse/: __init__.py  exif.py
tests/: __init__.py
