[tool.poetry]
name = "glimpse"
version = "0.1.0"
description = "Timelapse camera calibration and surface motion extraction"
authors = ["Ethan Welty <ethan.welty@gmail.com>", "Douglas Brinkerhoff"]
license = "MIT"
readme = "README.md"
homepage = "hhttps://github.com/ezwelty/glimpse"
repository = "https://github.com/ezwelty/glimpse"
keywords = ["glaciology", "timelapse", "photogrammetry", "camera calibration", "feature tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Scientific/Engineering :: Image Recognition"
]

[tool.poetry.dependencies]
python = "^3.7"
piexif = "^1.1.3"
black = "^19.10b0"
flake8 = "^3.8.2"
flake8-black = "^0.2.0"
flake8-import-order = "^0.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
mypy = "^0.780"
typeguard = "^2.9.1"
flake8-annotations = "^2.1.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.4.0"
xdoctest = "^0.12.0"
pygments = "^2.6.1"
sphinx = "^3.1.0"
sphinx_rtd_theme = "^0.4.3"
sphinx_autodoc_typehints = "^1.10.3"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["glimpse"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
